--- a/firmware/time-display.yaml
+++ b/firmware/time-display.yaml
@@ -1,6 +1,6 @@
 esphome:
-  name: simple-display
-  friendly_name: Simple Display
+  name: time-display
+  friendly_name: Time Display
 
 esp32:
   variant: esp32s3
@@ -19,7 +19,7 @@ wifi:
   # ssid: "YOUR_WIFI_SSID"
   # password: "YOUR_WIFI_PASSWORD"
   ap:
-    ssid: "Simple-Display"
+    ssid: "Time-Display"
     password: "12345678"
 
 captive_portal:
